crates/escalier_parser/src/snapshots/escalier_parser__tests__type_decls-11.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"type Array<T> = {[key: number]: T};\")"
---
Ok(
    Program {
        body: [
            TypeDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 35,
                    },
                },
                span: 0..35,
                declare: false,
                id: Ident {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 5,
                        },
                        end: Position {
                            line: 0,
                            column: 10,
                        },
                    },
                    span: 5..10,
                    name: "Array",
                },
                type_ann: TypeAnn {
                    kind: Object(
                        ObjectType {
                            elems: [
                                Index(
                                    TIndex {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 17,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 33,
                                            },
                                        },
                                        span: 17..33,
                                        key: TypeAnnFnParam {
                                            pat: Pattern {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 18,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 21,
                                                    },
                                                },
                                                span: 18..21,
                                                kind: Ident(
                                                    BindingIdent {
                                                        name: "key",
                                                        mutable: false,
                                                        span: 18..21,
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 18,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 21,
                                                            },
                                                        },
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                            type_ann: TypeAnn {
                                                kind: Keyword(
                                                    KeywordType {
                                                        keyword: Number,
                                                    },
                                                ),
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 23,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 29,
                                                    },
                                                },
                                                span: 23..29,
                                                inferred_type: None,
                                            },
                                            optional: false,
                                        },
                                        mutable: false,
                                        type_ann: TypeAnn {
                                            kind: TypeRef(
                                                TypeRef {
                                                    name: "T",
                                                    type_args: None,
                                                },
                                            ),
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 32,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 33,
                                                },
                                            },
                                            span: 32..33,
                                            inferred_type: None,
                                        },
                                    },
                                ),
                            ],
                        },
                    ),
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 16,
                        },
                        end: Position {
                            line: 0,
                            column: 34,
                        },
                    },
                    span: 16..34,
                    inferred_type: None,
                },
                type_params: Some(
                    [
                        TypeParam {
                            span: 11..12,
                            name: Ident {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 11,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 12,
                                    },
                                },
                                span: 11..12,
                                name: "T",
                            },
                            constraint: None,
                            default: None,
                        },
                    ],
                ),
            },
        ],
    },
)
